Update common/src/main/java/com/spredfast/kafka/connect/s3/Configure.java
review comment

Co-authored-by: Ryan Evans <86231944+ryanevansmettle@users.noreply.github.com>